Added unit tests and loggin
